fix dev constantly crashing